@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-	<email>maintainer-needed@gentoo.org</email>
-	</maintainer>
+<maintainer>
+<email>maintainer-needed@gentoo.org</email>
+</maintainer>
+<use>
+<flag name='tinfo'>Link against libtinfo from sys-libs/ncurses</flag>
+</use>
 </pkgmetadata>
